# portfolio

./: pyproject.toml
static/css/: style.css
templates/: base.html  index.html
